Added jwt bearer/basic token based authentication
